force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__AcctReOpenCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__AcctReOpenCode__c</fullName>
    <description>Users populate this optional picklist to indicate if the system can reopen a closed account. By default, it is No.</description>
    <label>Allow Reopening of Closed Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>