force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ChgODCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ChgODCode__c</fullName>
    <description>Users populate this optional picklist to indicate if a continuous charge should occur when an account maintains a negative balance. By default, it is No.</description>
    <label>Charge a Continuous Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>