force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ChgODFeeDaysType__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ChgODFeeDaysType__c</fullName>
    <description>Users populate this optional picklist to select the type of days to use when determining overdraft fees. By default, it is N/A.</description>
    <label>Type of Days to Charge Overdraft Fees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CalDays</fullName>
                <label>Actual Days</label>
            </value>
            <value>
                <fullName>BusDays</fullName>
                <label>Business Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>