force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ChgODFeeMin__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ChgODFeeMin__c</fullName>
    <description>Users populate this optional number field with the minimum amount to charge for maintaining a negative balance. By default, it is N/A.</description>
    <label>Continuous OD Fee Min</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>