force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ChgODFeePct__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ChgODFeePct__c</fullName>
    <description>Users populate this optional number field with the percentage used to determine the charge for maintaining a negative balance. By default, it is N/A.</description>
    <label>Continuous OD Fee Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>