force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ChkGuar__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ChkGuar__c</fullName>
    <description>Users populate this optional picklist to indicate the check guaranty. By default, it is No.</description>
    <label>Check Guaranty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>