force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ClubPin__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ClubPin__c</fullName>
    <description>Users populate this optional number field to indicate a club type account. Users can enter a plan number to determine the plan type. By default, it is N/A.</description>
    <label>Club Plan</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>