force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__DlyNSFMaxChg__c.field-meta.xml
<CustomField>
    <fullName>JHJX__DlyNSFMaxChg__c</fullName>
    <description>Users populate this optional number field with the maximum amount the system can charge an account for NSF items daily. By default, it is N/A.</description>
    <label>Daily NSF Max</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>