force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ElecStmtChgWav__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ElecStmtChgWav__c</fullName>
    <description>Users populate this optional picklist to select the service charge method for electronic statements. By default, it is Chg.</description>
    <label>Electronic Statement Service Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chg</fullName>
                <default>true</default>
                <label>Chg</label>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Wav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>