force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ElecStmtType__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ElecStmtType__c</fullName>
    <description>Users populate this optional picklist to select the type of electronic statement. By default, it is Both.</description>
    <label>Type of Electronic Statement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>