force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ImgItemsFrntBackCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ImgItemsFrntBackCode__c</fullName>
    <description>Users populate this optional picklist to indicate how the front and back of the image items should print on the deposit periodic statement. By default, it is 1.</description>
    <label>Print Image Items Front/Back</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>