force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ImgItemsPerPgCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ImgItemsPerPgCode__c</fullName>
    <description>Users populate this optional number field with the number of image items to print per page on the deposit periodic statement. By default, it is N/A.</description>
    <label>Print Images Per Page</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>