force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ImgPrtChkOrderCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ImgPrtChkOrderCode__c</fullName>
    <description>Users populate this optional picklist to determine the order that checks print on the deposit periodic statement. By default, it is No.</description>
    <label>Print Checks in Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>