force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ItmTrunc__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ItmTrunc__c</fullName>
    <description>Users populate this optional picklist to indicate if the system should use item truncation and safekeeping. By default, it is NoTrunc.</description>
    <label>Item Truncation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Img</fullName>
            </value>
            <value>
                <fullName>ImgAndTrunc</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>NoTrunc</fullName>
                <default>true</default>
                <label>NoTrunc</label>
            </value>
            <value>
                <fullName>Trunc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>