force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__NumAllowReDepItems__c.field-meta.xml
<CustomField>
    <fullName>JHJX__NumAllowReDepItems__c</fullName>
    <description>Users populate this optional number field with the allowable number of redeposit foreign return items. By default, it is N/A.</description>
    <label>Number of Redeposits</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>