force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ODLmt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ODLmt__c</fullName>
    <description>Users populate this optional number field with the overdraft limit code. By default, it is Chg</description>
    <label>Overdraft Limit Code</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>