force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ODNot3Days__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ODNot3Days__c</fullName>
    <description>Users populate this optional number field with the number of days that must lapse before sending the third overdraft notice. By default, it is N/A.</description>
    <label>Number of Days Until Third OD Notice</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>