force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ODPrvlgOptVal__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ODPrvlgOptVal__c</fullName>
    <description>Users populate this optional picklist to indicate if the system should report overdraft plans to regulatory agencies. By default, it is No.</description>
    <label>Overdraft Privilege Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
                <default>true</default>
                <label>Decline</label>
            </value>
            <value>
                <fullName>Exmp</fullName>
            </value>
            <value>
                <fullName>Inelgb</fullName>
            </value>
            <value>
                <fullName>NoRs</fullName>
            </value>
            <value>
                <fullName>Revo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>