force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__ODRegRptCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ODRegRptCode__c</fullName>
    <description>The code used to determine how overdraft plans should be reported to regulatory agencies.</description>
    <label>Report to Regulatory Agencies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>