force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__PayIntEOMCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__PayIntEOMCode__c</fullName>
    <description>Users populate this optional picklist to indicate how to handle interest payments through the end of the month. By default, it is No.</description>
    <label>Handle Interest Payments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>