force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__SerChgCycle__c.field-meta.xml
<CustomField>
    <fullName>JHJX__SerChgCycle__c</fullName>
    <description>Users populate this optional picklist to determine when an institution debits the account for service charges. By default, it is Chg.</description>
    <label>Service Charge Cycle</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>