force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__SerChgWav__c.field-meta.xml
<CustomField>
    <fullName>JHJX__SerChgWav__c</fullName>
    <description>The field that defines when an institution debits the account for service charges.</description>
    <label>Service Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chg</fullName>
                <default>true</default>
                <label>Chg</label>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Wav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>