force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__StmtCycle__c.field-meta.xml
<CustomField>
    <fullName>JHJX__StmtCycle__c</fullName>
    <description>Users populate this optional number field with the statement cycle. By default, it is N/A.</description>
    <label>Statement Cycle</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>