force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/JHJX__StmtCycResetFreqCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__StmtCycResetFreqCode__c</fullName>
    <description>Users populate this optional picklist to select the frequency to reset the counters that track the number of statements cycled/printed over time. By default, it is Service Charge Cycle.</description>
    <label>Freq to Reset Statement Cycle Counter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Calendar month</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Interest cycle</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No Charge</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>Service Charge Cycle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>