force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Annual_Rate_Increase__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Annual_Rate_Increase__c</fullName>
    <description>The administrator populates this optional field with how much the interest rate increases annually. The Annual Rate Increase is added to the Teaser Rate.</description>
    <inlineHelpText>This field displays how much the interest rate increases annually.</inlineHelpText>
    <label>Annual Rate Increase</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>