force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Average_Term__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Average_Term__c</fullName>
    <description>The average life of the deposit product in months.</description>
    <label>Average Term</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>