force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__CD_Term__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CD_Term__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the length of time from the opening date of the time deposit to the maturity date (for example, 91 days 18 months).</description>
    <inlineHelpText>The length of time from the opening date of the time deposit to the maturity date (e.g. 91 days 18 months).</inlineHelpText>
    <label>CD Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>