force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Compounding_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Compounding_Frequency__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. Specifies an institution&apos;s general policy regarding how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings.</description>
    <inlineHelpText>Specifies an institution&apos;s general policy regarding how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings.</inlineHelpText>
    <label>Compounding Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Every Other Week</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Continuous</fullName>
            </value>
            <value>
                <fullName>No compounding/Simple</fullName>
            </value>
            <value>
                <fullName>Semimonthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>