force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Crediting_Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Crediting_Frequency_Type__c</fullName>
    <description>This data indicates how frequently accrued earnings will be paid for the account. Crediting frequency is used with compounding frequency and payment method to disclose Compounding and Crediting as required by Regulation DD. For example, &quot;Earnings will be compounded daily and will be credited to the account monthly.&quot;</description>
    <label>Crediting Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Bi-monthly</fullName>
            </value>
            <value>
                <fullName>Semi-annually</fullName>
            </value>
            <value>
                <fullName>At maturity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>