force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Dependent_Structures__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Dependent_Structures__c</fullName>
    <description>The administrator manually populates this optional field. It specifies the structure hierarchy allowed for this product. If left blank, all structures configured in the org are allowed for the product.</description>
    <label>Dependent Structures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ELOC</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Multi Level Future</fullName>
            </value>
            <value>
                <fullName>Regular Future</fullName>
            </value>
            <value>
                <fullName>Term Loan/Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>