force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Exposure_Filter__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exposure_Filter__c</fullName>
    <description>Administrators manually populate this optional picklist field. When this field is populated, then the only loans that should be used in the exposure calculation are loans with a matching value in the Product Feature Filter field on the Statistic Configuration object. For example, if “Tier 1” is the value of the Exposure Filter field on the Product Feature object, then the only loans that will be used to calculate exposure are those with a value of “Tier 1&quot; in the Product Feature Filter field on the Statistic Configuration object.</description>
    <label>Exposure Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>